etc/sysconfig/iptables
# Generated by iptables-save v1.4.7 on Tue Dec 23 14:02:21 2014
*nat
:PREROUTING ACCEPT [195:14953]
:POSTROUTING ACCEPT [1:428]
:OUTPUT ACCEPT [1:428]
COMMIT
# Completed on Tue Dec 23 14:02:21 2014
# Generated by iptables-save v1.4.7 on Tue Dec 23 14:02:21 2014
*filter
:INPUT ACCEPT [109:10539]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4:240]
-A INPUT -p tcp -m tcp --dport 5432 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p udp -m udp --sport 53 -j ACCEPT 
-A INPUT -p udp -m udp --dport 53 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 5432 -j ACCEPT 
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT 
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT 
-A OUTPUT -p udp -m udp --sport 53 -j ACCEPT 
COMMIT
# Completed on Tue Dec 23 14:02:21 2014
